--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"cross-env": "^6.0.3",
 		"css-loader": "^3.4.2",
 		"eases-jsnext": "^1.0.10",
+		"ejs-loader": "^0.3.5",
 		"extract-loader": "^3.1.0",
 		"file-loader": "^5.0.2",
 		"html-webpack-plugin": "^3.2.0",
